--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 {% for sl in show_list %}
-    {% for a in sl %}
-        {{ a }}
-    {% endfor %}
+{#    {% for a in sl %}#}
+{#        {{ a }}#}
+{#    {% endfor %}#}
+    {{ sl }}
 {% endfor %}
 
 
